Fixed an issue with the modal not closing on smaller devices

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     opacity: 0;
-    z-index: 10;
+    z-index: 20;
 
     background-color: rgba(41, 38, 38, 0.8);
 
@@ -22,10 +22,10 @@
         background-color: transparent;
         border: none;
         color: white;
-        z-index: 10;
 
         @include respond(tab-port) {
             top: 5%;
+            font-size: 3rem;
         }
     }
 }
